--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "mongodb": "^3.6.4",
+    "mongoose": "^5.11.17",
     "socket.io": "^3.1.1"
   }
 }
